# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  quality.sh
backend/: ai_generator.py  app.py  config.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_rag_system.py
backend/tests/unit/: test_ai_generator.py  test_config.py  test_search_tools.py
frontend/: index.html  script.js  style.css
